[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app", "data", "solver", "chart", "_cli"]

[project]
name = "stock-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "ortools>=9.15.6755",
    "pandas>=3.0.2",
    "streamlit>=1.56.0",
]

[project.scripts]
stock-solver = "_cli:run"
